Improvement for issue with main-nav in firefox - Increased z-index for loading layers to work with main-nav - Refactored init for loading and messages

--- a/src/less/corporate-ui/custom-classes/loading.less
+++ b/src/less/corporate-ui/custom-classes/loading.less
@@ -9,7 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1050;
+    z-index: 1150;
     width: 100%;
     height: 100%;
     background-color: rgba(250, 250, 250, 0.6);
@@ -22,7 +22,7 @@
     font-size: 30px;
     margin-left: -15px;
     margin-top: -15px;
-    z-index: 1051;
+    z-index: 1160;
 
     &:extend([class^="icon-"]);
     &:extend(.icon-spinner:before);
